Bug 568431 - Remove the requirement for mCallbackPeriod from the generic media backend. r=doublec